# green_bank

./: .gitignore  README.md  pyproject.toml
green_bank/: app.py
green_bank/api/: routers.py  spec.py
green_bank/api/controllers/: auth_controller.py  health_check.py  transaction_controller.py  user_controller.py
green_bank/application/errors/: green_bank_exception.py
green_bank/application/errors/handler/: error_handling.py
green_bank/application/schemas/: auth_schema.py  error_schema.py  message.py  transaction_schema.py  user_schema.py
green_bank/application/services/: auth_service.py  transaction_service.py  user_service.py
green_bank/application/validators/: document_validate.py  email_validate.py
green_bank/domain/model/: entity.py  transaction.py  user.py
green_bank/infra/: database.py  settings.py
migrations/: env.py
migrations/versions/: 9bbf9bb6c731_create_user_and_transaction_tables.py
