[project]
name = "green-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos Eduardo",email = "ducameneses16@gmail.com"}
]
readme = "README.md"
requires-python = "3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "alembic (>=1.14.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

