[project]
name = "green-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos Eduardo",email = "ducameneses16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "pydantic[email] (>=2.10.5,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "flask-jwt-extended",
    "flask-marshmallow",
    "flask-bcrypt",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

